--- a/day19/s14day19/templates/index.html
+++ b/day19/s14day19/templates/index.html
@@ -9,5 +9,26 @@
         <input type="text" />        
         <input type="submit" value="提交" />        
     </form>
+    {{ user_dict.k1}}
+<!--     <ul>
+        {% for k in user_dict.keys %}
+            <li>{{ k }}</li>
+        {% endfor %}
+    </ul>
+    <ul>
+        {% for v in user_dict.values %}
+            <li><a href="/detail.html">{{ v }}</a></li>
+        {% endfor %}
+    </ul> -->
+<!--     <ul>
+        {% for k, v in user_dict.items %}
+            <li><a target="_blank" href="/detail/?nid={{ k }}">{{ v.name }}</a></li>
+        {% endfor %}
+    </ul> -->
+    <ul>
+        {% for k, v in user_dict.items %}
+            <li><a target="_blank" href="/detail-{{ k }}.html">{{ v.name }}</a></li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
