--- a/day19/s14day19/templates/home.html
+++ b/day19/s14day19/templates/home.html
@@ -13,7 +13,7 @@
 <body>
     <div id="head"></div>
     <div>
-        <form action="/home/" method="post">
+        <form action="/cmdb/home/" method="post">
             <input type="text" name='username' placeholder="请输入用户名" />
             <input type="text" name='email' placeholder="请输入邮箱" />
             <input type="text" name='gender' placeholder="请输入性别" />
