--- a/day19/s14day19/templates/index.html
+++ b/day19/s14day19/templates/index.html
@@ -27,7 +27,7 @@
     </ul> -->
     <ul>
         {% for k, v in user_dict.items %}
-            <li><a target="_blank" href="/detail-{{ k }}.html">{{ v.name }}</a></li>
+            <li><a target="_blank" href="/cmdb/detail-{{ k }}.html">{{ v.name }}</a></li>
         {% endfor %}
     </ul>
 </body>
