--- a/day19/s14day19_2/templates/userinfo_detail.html
+++ b/day19/s14day19_2/templates/userinfo_detail.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="head">
-        信息查询系统
+        用户信息
     </div>
     <div>
         <div class='menu'>
@@ -46,7 +46,11 @@
             <a class="item" href="/cmdb/user_group/">用户组信息</a>
         </div>
         <div class="content">
-            
+
+            <h4>用户ID:{{ user.id }}</h4>
+            <h4>用户名:{{ user.username }}</h4>
+            <h4>密码:{{ user.password }}</h4>
+
         </div>
     </div>
 </body>
