--- a/day19/s14day19_2/templates/user_info.html
+++ b/day19/s14day19_2/templates/user_info.html
@@ -46,10 +46,18 @@
             <a class="item" href="/cmdb/user_group/">用户组信息</a>
         </div>
         <div class="content">
+            <h3>新增用户</h3>
+            <form action="/cmdb/user_info/" method="POST">
+                <input type="text" name="username" placeholder="用户名" />
+                <input type="text" name="password" placeholder="密码" />
+                <input type="submit" value="添加">
+            </form>
+            <h3>用户信息</h3>
             <ul>
                 {% for row in userset %} 
                     <li>
-                        <a href="/cmdb/userinfo-detail-{{row.id}}/">{{row.username}}</a>
+                        <a href="/cmdb/userinfo-detail-{{row.id}}/">{{row.username}}</a> 
+                        | <a href="/cmdb/user-del-{{row.id}}/">删除</a>
                     </li>
                 {% endfor %}
             </ul>
