--- a/day20/day20_1/templates/business.html
+++ b/day20/day20_1/templates/business.html
@@ -7,7 +7,7 @@
 <body>
     <h1>业务线列表</h1>
     {% for i in v %}
-        <li>{{ i.caption }}-{{ i.code }}</li>
+        <li>{{ i.ip }}-{{ i.caption }}</li>
     {% endfor %}
 </body>
 </html>
