--- a/day20/day20_1/templates/host.html
+++ b/day20/day20_1/templates/host.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Business</title>
+    <style type="text/css">
+        .shadow{
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            background: black;
+            z-index: 100;
+            opacity: 0.6;
+        }
+        .add_modal{
+            position: fixed;
+            left: 50%;
+            top: 100px;
+            height: 300px;
+            width: 400px;
+            z-index: 101;
+            background: white;
+            margin-left: -200px;
+        }
+        .hide{
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <h1>业务线列表（对象）</h1>
+    <input id="add_host" type="button" value="添加" />
     <table border="1">
         <thead>
             <tr>
@@ -13,15 +39,17 @@
                 <th>IP</th>
                 <th>端口</th>
                 <th>业务线名称</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
             {% for i in v1 %}
-                <tr hid="{{ id.nid }}" bid="{{ id.b_id }}">
+                <tr hid="{{ i.nid }}" bid="{{ i.b_id }}">
                     <td>{{ i.hostname }}</td>
                     <td>{{ i.ip }}</td>
                     <td>{{ i.port }}</td>
                     <td>{{ i.b.caption }}</td>
+                   
                 </tr>
             {% endfor %}
         </tbody>
@@ -35,5 +63,34 @@
     {% for i in v3 %}
         <li>{{ i.0 }}-{{ i.1 }}-{{ i.2 }}</li>
     {% endfor %}
+
+    <div class="shadow hide"></div>
+    <div class="add_modal hide">
+        <form action="/cmdb/host/" method="POST">
+            <div><input type="text" name="hostname" placeholder="主机名" /></div>
+            <div><input type="text" name="ip" placeholder="IP" /></div>
+            <div><input type="text" name="port" placeholder="端口" /></div>
+            <div>
+                <select name="b_id">
+                    {% for row in b_list %}
+                        <option value="{{ row.id }}">{{ row.caption }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <input type="submit" value="提交" />
+            <input id="cancel" type="button" value="取消" />
+        </form>
+    </div>
+    <script src="/static/jquery-1.12.4.js"></script>
+    <script type="text/javascript">
+        $(function(){
+            $('#add_host').click(function(event) {
+                $('.shadow,.add_modal').removeClass('hide')
+            });
+            $('#cancel').click(function(event) {
+                $('.shadow,.add_modal').addClass('hide')
+            });
+        })
+    </script>
 </body>
 </html>
