--- a/day20/day20_1/templates/host.html
+++ b/day20/day20_1/templates/host.html
@@ -54,7 +54,7 @@
             {% endfor %}
         </tbody>
     </table>
-
+<!-- 
     <h1>业务线列表（字典）</h1>
     {% for i in v2 %}
         <li>{{ i.hostname }}-{{ i.ip }}-{{ i.port }}</li>
@@ -62,22 +62,23 @@
     <h1>业务线列表（元组）</h1>
     {% for i in v3 %}
         <li>{{ i.0 }}-{{ i.1 }}-{{ i.2 }}</li>
-    {% endfor %}
+    {% endfor %} -->
 
     <div class="shadow hide"></div>
     <div class="add_modal hide">
         <form action="/cmdb/host/" method="POST">
-            <div><input type="text" name="hostname" placeholder="主机名" /></div>
-            <div><input type="text" name="ip" placeholder="IP" /></div>
-            <div><input type="text" name="port" placeholder="端口" /></div>
+            <div><input id="hostname" type="text" name="hostname" placeholder="主机名" /></div>
+            <div><input id="ip" type="text" name="ip" placeholder="IP" /></div>
+            <div><input id="port" type="text" name="port" placeholder="端口" /></div>
             <div>
-                <select name="b_id">
+                <select id="sel" name="b_id">
                     {% for row in b_list %}
                         <option value="{{ row.id }}">{{ row.caption }}</option>
                     {% endfor %}
                 </select>
             </div>
             <input type="submit" value="提交" />
+            <a id="ajax_submit" style="border: 1px solid #AAAAAA" >悄悄提交</a>
             <input id="cancel" type="button" value="取消" />
         </form>
     </div>
@@ -87,8 +88,28 @@
             $('#add_host').click(function(event) {
                 $('.shadow,.add_modal').removeClass('hide')
             });
+
             $('#cancel').click(function(event) {
                 $('.shadow,.add_modal').addClass('hide')
+            });
+
+            $('#ajax_submit').click(function(event) {
+                $.ajax({
+                    url: "/cmdb/test_ajax/",
+                    type: "POST",
+                    data: {'hostname': $('#hostname').val(),
+                            'ip': $('#ip').val(),
+                            'port': $('#port').val(),
+                            'sel': $('#sel').val()
+                          },
+                    success: function(data){
+                        if(data == 'OK'){
+                            location.reload()
+                        }else {
+                            alert(data)
+                        }
+                    }
+                })
             });
         })
     </script>
